samples/_failures_safe/1761616517_9aefe1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f8b8ecf.c: In function ‘main’:
./samples/SAFE/__tmp_6f8b8ecf.c:180:15: error: expected ‘;’ at end of input
  180 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_6f8b8ecf.c:180:9: error: expected declaration or statement at end of input
  180 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_6f8b8ecf.c:180:9: error: expected declaration or statement at end of input
